--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/logestechs?allowPublicKeyRetri
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+traning-project.base-url=http://localhost:8080
+server.servlet.context-path=/apis
+logging.file.name=logs/applications.log
+spring.jpa.show-sql=true
