add swagger configrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ traning-project.base-url=http://localhost:8080
 server.servlet.context-path=/apis
 logging.file.name=logs/applications.log
 spring.jpa.show-sql=true
+springdoc.swagger-ui.path=/swagger
