--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/logestechs?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+
 traning-project.base-url=http://localhost:8080
 server.servlet.context-path=/apis
+
 logging.file.name=logs/applications.log
-spring.jpa.show-sql=true
 springdoc.swagger-ui.path=/swagger
+cache-name=test-cache
